Name:                   Loh
Version:                0.0.0
Category:               Network
Description:            LastFMScrobbler on Haskell
Synopsis:               LastFMScrobbler on Haskell

License:                MIT
License-file:           LICENSE

Author:                 Dmitry Malikov

Maintainer:             Dmitry Malikov <malikov.d.y@gmail.com>

Build-type:             Simple
Cabal-version:          >= 1.6
Homepage:               -

Library
  Build-Depends:        base >= 3 && < 5,
                        containers,
                        directory,
                        filepath,
                        libmpd == 0.7.2,
                        liblastfm >= 0.0.3 && < 0.0.4,
                        mtl,
                        old-locale,
                        process,
                        split,
                        time,
                        transformers

  HS-Source-Dirs:       src/libloh/, src/libmocp/, src/

  Exposed-Modules:      Loh.Config,
                        Loh.DB,
                        Loh.Eventer,
                        Loh.Log,
                        Loh.LoveTrack,
                        Loh.Player,
                        Loh.Scrobbler,
                        Loh.Types,
                        Mocp

  GHC-Options:          -Wall
                        -fwarn-unused-binds
                        -fwarn-unused-imports
                        -fwarn-unused-matches


Executable              loh-get-session
  Main-is:              loh-get-session.hs
  HS-Source-Dirs:       tools/


Executable              loh-lovetrack-np
  Main-is:              loh-lovetrack-np.hs
  HS-Source-Dirs:       src/libloh/, src/libmocp/, tools/


Executable              loh
  Main-is:              Loh.hs
  HS-Source-Dirs:       src/libloh/, src/libmocp/
