Name:                   loh
Version:                0.0.0
Category:               Network
Description:            LastFMScrobbler on Haskell
Synopsis:               LastFMScrobbler on Haskell

License:                MIT
License-file:           LICENSE

Author:                 Dmitry Malikov

Maintainer:             Dmitry Malikov <malikov.d.y@gmail.com>

Build-type:             Simple
Cabal-version:          >= 1.6
Homepage:               https://github.com/dmalikov/loh

flag debug
  description: Enable DEBUG logging.
  default: False

flag without_client
  description: Compile lohd without a client
  default: False

Library
  Build-Depends:        aeson,
                        base >= 3 && < 5,
                        bytestring,
                        containers,
                        directory,
                        filepath,
                        ghc-prim,
                        hdaemonize,
                        hslogger,
                        liblastfm >= 0.0.3.3,
                        libmpd >= 0.8,
                        monad-loops,
                        mtl,
                        network,
                        old-locale,
                        optparse-applicative,
                        process,
                        split,
                        text,
                        time,
                        unix,
                        unordered-containers,
                        vector

  HS-Source-Dirs:       src/, src/libmocp/

  Exposed-Modules:      Loh.Core.LastFM.Auth
                        Loh.Core.LastFM.Method,
                        Loh.Core.Players,
                        Loh.Core.Players.Kludges,
                        Loh.Core.Players.Mocp,
                        Loh.Core.Players.Mpd,
                        Loh.Core.Task,
                        Loh.Core.Types,
                        Loh.Server.Scrobbler,
                        Mocp

  Extensions:           UnicodeSyntax

  GHC-Options:          -Wall


Executable              loh
  Main-is:              Client.hs
  HS-Source-Dirs:       src/, src/Loh/Client/, src/libmocp/
  Extensions:           UnicodeSyntax

  if flag(debug)
    CPP-Options:        -D__DEBUG__

  if flag(without_client)
    buildable:          False


Executable              lohd
  Main-is:              Server.hs
  HS-Source-Dirs:       src/, src/Loh/Server/
  Extensions:           UnicodeSyntax
