Name:                   loh
Version:                0.0.0
Category:               Network
Description:            LastFMScrobbler on Haskell
Synopsis:               LastFMScrobbler on Haskell
License:                MIT
License-file:           LICENSE
Author:                 Dmitry Malikov
Maintainer:             Dmitry Malikov <malikov.d.y@gmail.com>
Build-type:             Simple
Cabal-version:          >= 1.6
Homepage:               https://github.com/dmalikov/loh

Library
  Build-Depends:        base >= 4 && < 5,
                        liblastfm >= 0.0.4,
                        cereal
  HS-Source-Dirs:       src
  Exposed-Modules:      Loh.Client
  Extensions:           UnicodeSyntax
  GHC-Options:          -Wall


Executable              lohd
  Main-is:              Loh/Server.hs
  Build-Depends:        base >= 4 && < 5,
                        bytestring,
                        liblastfm >= 0.0.4,
                        mtl,
                        network,
                        lens,
                        cereal
  HS-Source-Dirs:       src
