name:                loh-examples
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.8

executable loh-examples
  main-is: scrobbler.hs
  build-depends: base >= 4 && < 5,
                 loh,
                 liblastfm,
                 libmpd,
                 mtl,
                 containers,
                 text,
                 time,
                 old-locale
